fix: message history
